--- a/src/app/componentes/modificar/modificar.component.html
+++ b/src/app/componentes/modificar/modificar.component.html
@@ -1,7 +1,7 @@
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Launch demo modal
+    MODIFICAR REDES
   </button>
   
   <!-- Modal -->
@@ -35,9 +35,6 @@
          
 
 
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">CERRAR</button>
         </div>
       </div>
     </div>
