--- a/src/app/componentes/acercade/acercade.component.css
+++ b/src/app/componentes/acercade/acercade.component.css
@@ -36,7 +36,7 @@
     background: linear-gradient(90deg, rgba(235,44,83,0.3839805453431373) 0%, rgba(218,212,68,0.38117942489495793) 59%, rgba(46,162,36,0.3895827862394958) 100%);
  }
 
-#acerca p{
+#textoAcerca p{
     font-size: larger;
     font-weight: bolder;
     
@@ -48,8 +48,8 @@ h1{
     margin-bottom: 50px;
 }
 
-h2{
-    font-weight: bolder;
+#miNombre{
+    font-weight:bolder;
     text-align: left;
     margin-top: 50px;
 }
