--- a/src/app/componentes/formulario-acercade/formulario-acercade.component.html
+++ b/src/app/componentes/formulario-acercade/formulario-acercade.component.html
@@ -1,6 +1,6 @@
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
-  <i class="bi bi-brush"></i>
+  <i class="bi bi-brush"></i> MODIFICAR DATOS PERSONALES
 
 
   </button>
