--- a/src/app/componentes/pie/pie.component.html
+++ b/src/app/componentes/pie/pie.component.html
@@ -1,3 +1,3 @@
 <p>
-Imagen de fondo de <a href="https://pixabay.com/es/users/davidzydd-985081/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2721425">David Zydd</a> en <a href="https://pixabay.com/es//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2721425">Pixabay</a>
+    Fondo: <a href="https://es.vecteezy.com/vectores-gratis/fondo-web">Fondo Web Vectores por Vecteezy</a>
 </p>
