--- a/src/app/componentes/proyectos/proyectos.component.css
+++ b/src/app/componentes/proyectos/proyectos.component.css
@@ -6,6 +6,7 @@
     width: 80vw;
     margin-left: 12vw;
     margin-top: 150px;
+    margin-bottom: 12vh;
     
 }
 h1 {
@@ -18,4 +19,14 @@ h1 {
     background: rgb(235,44,83);
     background: linear-gradient(90deg, rgba(235,44,83,0.3839805453431373) 0%, rgba(218,212,68,0.38117942489495793) 59%, rgba(46,162,36,0.3895827862394958) 100%);
 
+}
+
+hr {
+    border: solid 5px black;
+
+    
+}
+
+.titulo{
+    width: 100%;
 }
