eliminación de boton sobrante

--- a/src/app/componentes/formulario-proyectos/formulario-proyectos.component.html
+++ b/src/app/componentes/formulario-proyectos/formulario-proyectos.component.html
@@ -27,7 +27,7 @@
                  <input id="linkImagen" type="text" formControlName="linkImagen"></div>
                 
                 <div>
-                <label for="otros">¿DESEA AGRGAR ALGO MAS? </label>
+                <label for="otros"> LINK </label>
                 <input id="otros" type="text" formControlName="otros" placeholder="Si corresponde"></div>
     
 
